added hover and active effects for navigation keys

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
             <!-- Home Navbar -->
             <div id="nav-container">
                 <img id="nav-menu-icon" src="./icons/navigation-menu/icons8-menu-30.png" alt="navigation">
-                <div id="nav-bar"></div>
             </div>
             <!-- Logo -->
             <div id="logo-div">
@@ -22,22 +21,33 @@
             <!-- Dark Mode Button -->
             <div id="dark-mode-container">
                 <img id="dark-mode-icon"  src="./icons/bulb/icons8-bulb-30.png" alt="dark mode button">
-                <div id="dark-mode-btn"></div>
             </div>
         </div>
 
         <div id="single-note-nav-view">
             <!-- Viewing Navbar -->
-            <div id="back-button"></div>
-            <h1 id="single-note-title"></h1>
-            <div id="edit-btn"></div>
+            <div id="back-btn-container">
+                <img id="back-btn-icon" src="./icons/back/icons8-back-30.png" alt="back">
+            </div>
+            <div id="note-title-container">
+                <h1 id="note-title">Temporary</h1>
+            </div>
+            <div id="edit-btn-container">
+                <img id="edit-btn-icon" src="./icons/write/icons8-write-24.png" alt="edit button">
+            </div>
         </div>
 
         <div id="single-note-nav-edit">
             <!-- Editing Navbar -->
-            <div id="back-button"></div>
-            <h1 id="single-note-title"></h1>
-            <div id="view-btn"></div>
+            <div id="undo-btn-container">
+                <img id="undo-btn-icon" src="./icons/undo/icons8-undo-30.png" alt="undo button">
+            </div>
+            <div id="note-title-container">
+                <h1 id="note-title">Temporary</h1>
+            </div>
+            <div id="view-btn-container">
+                <img id="view-btn-icon" src="./icons/pen/icons8-pen-30.png" alt="view button">
+            </div>
         </div>
     </header>
 
